# sion-ctf

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  ctf_framework_docs.md  docker-compose.yml  pyproject.toml  sion-ctf-proxy.service  verify_challenge.py
app/: celery_app.py  challenge_proxy.py  config.py  crypto.py  db.py  main.py  models.py
app/api/: jobs.py
app/auth/: router.py  utils.py
app/ctf/: aider_cli.py  aider_fixer.py  docker_mgr.py  generator.py  router.py  validator.py
app/ctf/templates/: __init__.py  auth.py  base.py  files.py  shell.py  sqlite.py
app/dashboard/: router.py
app/tasks/: __init__.py  ctf_tasks.py
app/templates/: base.html  dashboard.html  index.html  login.html  register.html  tutorial.html
app/tutorial/: generator.py  router.py
tests/: conftest.py  test_app.py  test_auth.py  test_ctf.py  test_docker_mgr.py  test_tutorial.py  test_validator.py
